@@ -2,6 +2,6 @@
 <strings>
 
     <!-- Plugin settings strings -->
-    <string id="30206">Show translated movies only</string>
+    <string id="30206">Show only movies with subtitles</string>
     <string id="30207">Show...</string>
 </strings>
