@@ -1,3 +1,10 @@
+[B]*** 0.0.11 ***[/B]
+- More clear and precise movie names
+- Initial android support
+
+[B]*** 0.0.10 ***[/B]
+- Fixed heroglyphs in movie names
+
 [B]*** 0.0.9 ***[/B]
 - Fixed CoverArt images
 - Added sorting and filtering in addon settings
